# tsp-singlestore-wasm2

./: Cargo.toml  tsp.wit
src/: lib.rs
