[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }
travelling_salesman = { path = "travelling_salesman", version = "1.1.22" } 
time = "0.3.15"

[lib]
crate-type = ["cdylib"]